# cdc-pipeline

./: .env.example  .gitignore  DESCRIPTION.md  DOCUMENTATION.md  Dockerfile  FLOW.md  Makefile  PLAN-Prototype.md  PLAN.md  PLAN_.md  PRD.md  README.md  demo-kafka.md  docker-compose.yml  progress.txt  pyproject.toml  session-ses_3377.md
.github/workflows/: ci.yml
config/debezium/: postgres-connector.json
config/trino/: iceberg.properties
data/batch-input/: sample.csv  sample.json
docs/: changelog.md  plan-prototype.md  plan.md  prd.md  runbook.md
infrastructure/debezium/: postgres-connector.json
init-scripts/: 00-create-databases.sh  seed-postgres.sql
init-scripts/debezium/: register-connector.sh
init-scripts/kafka/: create-topics.sh
init-scripts/postgres/: 00-create-databases.sh  seed-postgres.sql
mysql1_data/: init.sql
mysql2_data/: init.sql
postgres_data/: init.sql
scripts/: demo-kafka.md  generate_test_data.py  health_check.py
src/api/: config.py  dependencies.py  main.py
src/batch/: batch_etl.py
src/common/: config.py  logger.py  utils.py
src/streaming/: config.py  iceberg_bootstrap.py  kafka_sources.py  main.py  redis_client.py  schemas.py  spark_session.py  stream_processing.py
test/: DOCUMENTATION.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  progress.txt  test_connectors.py  test_iceberg_minio.py
test/init-scripts/: register-debezium.sh  seed-postgres.sql
tests/: conftest.py
tests/api/: test_endpoints.py  test_sse.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_avro_schemas.py  (+2 more)
(+38 files in other folders)
